--- a/templates/index.html
+++ b/templates/index.html
@@ -349,8 +349,8 @@
             <span class="close">&times;</span>
             <h2>Login</h2>
             <form id="loginForm">
-                <label for="loginUsername">Username:</label>
-                <input type="text" id="loginUsername" name="loginUsername" required>
+                <label for="loginEmail">Email:</label>
+                <input type="text" id="loginEmail" name="loginEmail" required>
 
                 <label for="loginPassword">Password:</label>
                 <input type="password" id="loginPassword" name="loginPassword" required>
