--- a/static/newstyle.css
+++ b/static/newstyle.css
@@ -19,7 +19,7 @@
       box-sizing: border-box;
       text-transform: none;
       transition: all .2s ease-out;
-	  display: none;
+	  /* display: none; */
       text-decoration: none;
 
 }
