--- a/templates/index.html
+++ b/templates/index.html
@@ -21,17 +21,13 @@
 </section>
 
 <!--services section-->
+
 <section class="Services" id="Services">
 
 	<h1 class="heading">Our <span>Services</span></h1>
 		<div class="box-container">
 
-			<div class="box">
-				<i class="fas fa-notes-medical"></i>
-				<h3>Free Checkups</h3>
-				<p>Not oly online checkup but also finalize offline available.</p>
-				<a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
-			</div>
+
 
 			<div class="box">
 				<i class="fas fa-video"></i>
@@ -67,6 +63,7 @@
 </section>
 
 
+
 <!--model section-->
 
 
@@ -81,7 +78,7 @@
 				<h3>Model1</h3>
 				<h2>Multiple Diseases</h2>
 				<p>Check which type of disease do you have?</p>
-				<a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
+				<a href="{% url "models:multi_disease" %}" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
 			</div>
 
 			<div class="box2">
@@ -253,7 +250,7 @@
             <button type="submit">Book Appointment</button>
         </form>
     </div>
-</div>
+	</div>
 
 			<!--
 			<div class="box">
@@ -312,7 +309,6 @@
 	</section>
 </section>
 <!--signup and login-->
-
 <section class="Login" id="Login">
 		<h1 class="heading">First <span>Login</span></h1>
 
