--- a/templates/signup.html
+++ b/templates/signup.html
@@ -111,7 +111,7 @@
                                 </div> {% endcomment %}
                                 <div class="col-12">
                                     <label for="experience" class="form-label">Experience <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" name="experience" id="experience"  placeholder="Experience" required>
+                                    <input type="text" class="form-control" name="experience" id="experience"  placeholder="Experience" >
                                 </div>
                                 <div class="col-12">
                                     <label for="address" class="form-label">Address <span class="text-danger">*</span></label>
@@ -120,7 +120,7 @@
 
                                 <div class="col-12">
                                     <label for="photo" class="form-label">Upload Profile Photo <span class="text-danger">*</span></label>
-                                    <input type="file" class="form-control" name="photo" id="photo" required>
+                                    <input type="file" class="form-control" name="photo" id="photo" >
                                 </div>
 
                                 
