--- a/static/newstyle.css
+++ b/static/newstyle.css
@@ -35,6 +35,7 @@ html{
 
 section{
 	padding:2rem 9%;
+	
 
 }
 section:nth-child(even){
@@ -163,14 +164,14 @@ section:nth-child(even){
 
 .home .content h3{
 	font-size: 3rem;
-	color:var(--black);
+	color:#000;
 	line-height: 1.8;
 	text-shadow: var(--text-shadow);
 }
 
 .home .content p{
 	font-size: 1.7rem;
-	color:var(--light-color);
+	/* color:#000; */
 	line-height: 1.8;
     padding: 1rem 0;
 } 
