--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
         <a href="#" class="logo"><i class="fa-solid fa-heart-pulse" style="color: #63E6BE;"></i>MediGen.</a>
     
         <nav class="navbar">
-            <a href="#Home">Home</a>
+            <a href="{% url "home" %}">Home</a>
             <a href="#Services">Services</a>
             <a href="#Models">Models</a>
             <a href="#About">About</a>
@@ -60,19 +60,19 @@
               <div class="box">
                 <h3>our services</h3>
                    <a href="#"> <i class="fas fa-chevron-right"></i> dental care </a>
-                   <a href="#"> <i class="fas fa-chevron-right"></i> message therapy </a>
-                   <a href="#"> <i class="fas fa-chevron-right"></i> cardioloty </a>
-                   <a href="#"> <i class="fas fa-chevron-right"></i> diagnosis  </a>
-                   <a href="#"> <i class="fas fa-chevron-right"></i> ambulance service </a>
+                   <a href="#"> <i class="fas fa-chevron-right"></i> disease prediction</a>
+                   {% comment %} <a href="#"> <i class="fas fa-chevron-right"></i> cardioloty </a> {% endcomment %}
+                   <a href="#"> <i class="fas fa-chevron-right"></i> online consultation  </a>
+                   {% comment %} <a href="#"> <i class="fas fa-chevron-right"></i> ambulance service </a> {% endcomment %}
               </div>
         
               <div class="box">
                 <h3>contact info</h3>
                    <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
                    <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-                   <a href="#"> <i class="fas fa-envelope"></i> shaikhanas@gmail.com </a>
-                   <a href="#"> <i class="fas fa-envelope"></i> anasbhai@gmail.com </a>
-                   <a href="#"> <i class="fas fa-map-marker-alt"></i> mumbai, india 400104</a>
+                   <a href="#"> <i class="fas fa-envelope"></i> samruddhi@gmail.com </a>
+                   <a href="#"> <i class="fas fa-envelope"></i> samruddhi@gmail.com </a>
+                   <a href="#"> <i class="fas fa-map-marker-alt"></i> chiplun, india 400104</a>
               </div>
         
              <div class="box">
